--- a/client/package.json
+++ b/client/package.json
@@ -10,18 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
     "@tailwindcss/vite": "^4.0.11",
     "axios": "^1.8.2",
     "fabric": "^6.6.1",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.4.11",
     "gsap": "^3.12.7",
     "lucide-react": "^0.479.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-awesome-reveal": "^4.3.1",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-model-viewer": "^0.6.1",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.2.0",
-    "tailwindcss": "^4.0.12"
+    "react-spring": "^9.7.5",
+    "tailwindcss": "^4.0.12",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
